// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ModalCloseButton — snapshots should match snapshot with title 1`] = `
<button
  aria-label="Close inspection"
  class="p-1.5 rounded-xs border wb-outline wb-text-muted hover:wb-text hover:bg-red-500/10 hover:border-red-500/30 transition-all"
  title="Close inspection"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-x w-4 h-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18 6 6 18"
    />
    <path
      d="m6 6 12 12"
    />
  </svg>
</button>
`;

exports[`ModalCloseButton — snapshots should match snapshot without title 1`] = `
<button
  aria-label="Close modal"
  class="p-1.5 rounded-xs border wb-outline wb-text-muted hover:wb-text hover:bg-red-500/10 hover:border-red-500/30 transition-all"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-x w-4 h-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18 6 6 18"
    />
    <path
      d="m6 6 12 12"
    />
  </svg>
</button>
`;
